--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 authors = ["Michael Amrhein <michael@adrhinum.de>"]
 description = "Octuple-precision floating-point arithmetic."
 readme = "README.md"
-homepage = "https://github.com/mamrhein/fpdec.rs"
-repository = "https://github.com/mamrhein/fpdec.rs"
-documentation = "https://docs.rs/fpdec/"
+homepage = "https://github.com/mamrhein/f256.rs"
+repository = "https://github.com/mamrhein/f256.rs"
+documentation = "https://docs.rs/f256/"
 license-file = "LICENSE.TXT"
 keywords = ["number", "precision", "floating-point", "arithmetics"]
 categories = ["data-structures", "mathematics"]
