--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ categories = ["data-structures", "mathematics"]
 [dependencies]
 num-traits = { version = "0.2.0", optional = true }
 
+[dev-dependencies]
+csv = "1.1"
+serde = { version = "1", features = ["derive"] }
+
 [features]
 default = ["std"]
 std = []
