--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ categories = ["data-structures", "mathematics"]
 exclude = ["analysis/*", "tests/*"]
 
 [dependencies]
+f256_pow2_div_pow5_lut = { version = "0.0.0", path = "pow2_div_pow5_lut" }
+f256_pow5_div_pow2_lut = { version = "0.0.0", path = "pow5_div_pow2_lut" }
+f256_pow2_div_pow10_lut = { version = "0.0.0", path = "pow2_div_pow10_lut" }
+f256_pow10_div_pow2_lut = { version = "0.0.0", path = "pow10_div_pow2_lut" }
 num-traits = { version = "0.2.0", optional = true }
 
 [dev-dependencies]
@@ -23,3 +27,7 @@ serde = { version = "1", features = ["derive"] }
 [features]
 default = ["std"]
 std = []
+
+[workspace]
+members = [".", "pow2_div_pow5_lut", "pow5_div_pow2_lut",
+    "pow2_div_pow10_lut", "pow10_div_pow2_lut"]
