--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "f256"
 version = "0.2.0"
 edition = "2021"
+rust-version = "1.66"
 authors = ["Michael Amrhein <michael@adrhinum.de>"]
 description = "Octuple-precision floating-point arithmetic."
 readme = "README.md"
